# cortex

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PROJECT_DESCRIPTION.md  README.md  ROADMAP.md  SECURITY.md  cortex.sh  docker-compose.cluster.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: cortex.toml
data/models/: win_prob.onnx
deploy/aws/: .env.example  Caddyfile  README.md  bootstrap.sh  docker-compose.prod.yml  load-data.sh
deploy/aws/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: FRONTEND_AUDIT.md
grafana/: cortex-dashboard.json  prometheus.yml
include/analytics/: EloTracker.hpp  GameStateIndex.hpp  HNSWIndex.hpp  WinProbModel.hpp
include/common/: Logger.hpp  TraceContext.hpp
include/distributed/: ConsistentHashRing.hpp  Coordinator.hpp  IngestorNode.hpp
include/etl/: BulkInserter.hpp  LiveIngestor.hpp  NBAClient.hpp
include/serving/: Auth.hpp  CircuitBreaker.hpp  ConnectionPool.hpp  EpollPoller.hpp  HttpServer.hpp  HttpUtils.hpp  ICache.hpp  IDatabase.hpp  IOPoller.hpp  KqueuePoller.hpp  Pagination.hpp  RateLimiter.hpp  RedisCache.hpp  Request.hpp  Response.hpp  Router.hpp  ServerContext.hpp
include/serving/handlers/: analytics_handler.hpp  auth_handler.hpp  docs_handler.hpp  games_handler.hpp  health_handler.hpp  metrics_handler.hpp  search_handler.hpp  static_handler.hpp  stats_handler.hpp  ws_handler.hpp
include/stream/: RingBuffer.hpp  StatAccumulator.hpp  StreamEvent.hpp  StreamProcessor.hpp
proto/: cortex.proto
scripts/: bootstrap_db.sh  train_win_prob.py
sql/: schema.sql
src/analytics/: EloTracker.cpp  GameStateIndex.cpp  HNSWIndex.cpp  WinProbModel.cpp
src/compat/: pqxx_source_location_shim.cpp
src/distributed/: ConsistentHashRing.cpp  Coordinator.cpp  IngestorNode.cpp
src/etl/: BulkInserter.cpp  LiveIngestor.cpp  NBAClient.cpp  main_etl.cpp
src/serving/: Auth.cpp  Connection.cpp  EpollPoller.cpp  HttpServer.cpp  KqueuePoller.cpp  RedisCache.cpp  Router.cpp  main_server.cpp
src/serving/handlers/: analytics_handler.cpp  auth_handler.cpp  docs_handler.cpp  games_handler.cpp  health_handler.cpp  metrics_handler.cpp  search_handler.cpp  static_handler.cpp  stats_handler.cpp  ws_handler.cpp
src/stream/: StatAccumulator.cpp  StreamProcessor.cpp
tests/benchmarks/: bench_queries.cpp  bench_similarity.cpp  bench_throughput.cpp  bench_ws_load.cpp
tests/fuzz/: fuzz_http_parser.cpp  fuzz_ws_frame.cpp
tests/integration/: test_integration.cpp
tests/property/: test_properties.cpp
tests/unit/: test_auth.cpp  test_bulk_inserter.cpp  test_circuit_breaker.cpp  test_handlers.cpp  test_hash_ring.cpp  test_hnsw.cpp  test_nba_client.cpp  test_pagination.cpp  test_router.cpp  test_serving.cpp  test_stream.cpp
www/: index.html
www/static/css/: app.css
www/static/js/: api.js  app.js  charts.js
www/static/js/data/: benchmarks.js
www/static/js/views/: architecture.js  benchmarks.js  observability.js  overview.js  recruiter.js
